<resources>
    <string name="app_name">Games</string>
    <string name="play">Do you wanna play?!</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="snack_and_ladder"><![CDATA[snack&ladder]]></string>
    <string name="snake">Snake</string>
    <string name="Gusse_num">Gussing The Numer !!</string>
    <string name="Rock_Paper_Scissor">"Rock Paper Scissor "</string>
    <string name="rock_paper_scissors">Rock Paper Scissors</string>
    <string name="computer">Computer</string>
    <string name="space" />
    <string name="player">Player</string>
    <string name="restart_game">Restart Game</string>
    <string name="sign_in">Sign In</string>
    <string name="email">E-mail</string>
    <string name="jhonwick_gmail_com">jhonwick.gmail.com</string>
    <string name="password">Password</string>
    <string name="pass">Enter your password</string>
    <string name="done">Done</string>
    <string name="first_name">Frist name</string>
    <string name="jhon">jhon</string>
    <string name="last_name">Last name</string>
    <string name="wick">wick</string>
    <string name="phone">Phone</string>
    <string name="already_have_an_account">Already have an acount</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>

    <string name="logout">LOGOUT</string>

    <string name="back4app_server_url">https://parseapi.back4app.com//</string>
    <string name="back4app_app_id">DKTXdpm9s4gJ9P6oyy3fxTj8LSWzmoLLnrrrKtit</string>
    <string name="back4app_client_key">COZcv1RUePXbGExzwwhaRxJqRTC1F7LLqhtL960E</string>
    <string name="user">User Name</string>
    <string name="games_app">Games APP</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>

</resources>