<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="199dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_margin="50dp"
            android:fontFamily="casual"
            android:text="@string/games_app"
            android:textColor="#FFFFFF"
            android:textSize="50sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="113dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/user"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:autofillHints=""
            android:background="#000000"
            android:hint="@string/enter_username"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#ECE3E3"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/password"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:autofillHints=""
                android:background="#000000"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="20dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFECE3E3"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

    <TextView
        android:id="@+id/loginButton"
        android:textStyle="bold"
        android:text="@string/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#000000"
        android:textColor="#ffffff"
       android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="don't have an account ?"
            android:textColor="#FFFFFF"
            android:fontFamily="casual"/>

        <TextView

            android:layout_marginStart="10dp"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:textColor="#ffffff"
            android:textSize="20sp"/>
    </LinearLayout>



</LinearLayout>