<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"

    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="124dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcomeTextView"
                android:layout_width="337dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:fontFamily="casual"/>

            <TextView
                android:id="@+id/playid"
                android:layout_width="241dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                android:text="@string/play"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:fontFamily="casual"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="247dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="185dp"
                android:layout_height="249dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ticimg"
                    android:layout_width="170dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/tic"
                    android:background="#FFFFFF"/>

                <Button
                    android:id="@+id/tic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="30sp"
                    android:backgroundTint="#14194E"
                    android:textColor="#ffffff"
                    android:onClick="tic"
                    android:text="@string/tic_tac_toe"
                    android:fontFamily="casual"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="249dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/snakeimg"
                    android:layout_width="170dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/g" />

                <Button
                    android:id="@+id/snake"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15sp"
                    android:backgroundTint="#14194E"
                    android:textColor="#ffffff"
                    android:onClick="Gusse"
                    android:text="@string/Gusse_num"
                    android:fontFamily="casual"/>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="238dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/rockimg"
                android:layout_width="170dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/m" />

            <Button
                android:id="@+id/Rock"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10sp"
                android:backgroundTint="#14194E"
                android:textColor="#ffffff"
                android:onClick="Rock"
                android:text="@string/Rock_Paper_Scissor"
                android:fontFamily="casual"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/welcomeTextView"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="#14194E"
                android:onClick="logout"
                android:text="@string/logout"
                android:textColor="#ffffff"
                android:fontFamily="casual"/>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>